# hello

./: README.md  hello.cabal  stack.yaml
app/: Main.hs  Wiring.hs
src/Hello/: App.hs  Application.hs  Classes.hs  Clock.hs  ClockImpl.hs  Configuration.hs  ConfigurationImpl.hs  Console.hs  ConsoleImpl.hs  FileSystem.hs  FileSystemImpl.hs  Greeter.hs  GreeterImpl.hs  Main.hs  Monad.hs  Notifier.hs  NotifierImpl.hs  Parts.hs  Run.hs  System.hs  Timer.hs  TimerImpl.hs
src/Hello/Clock/: Class.hs
src/Hello/Configuration/: Class.hs  Impl.hs
src/Hello/Console/: Class.hs  Impl.hs
src/Hello/Exit/: Class.hs  Impl.hs
src/Hello/FileSystem/: Class.hs  Impl.hs
src/Hello/Greeter/: Class.hs  Impl.hs
src/Hello/Timer/: Class.hs  Impl.hs
test/Hello/: ApplicationSpec.hs  ConfigurationSpec.hs  Fixture.hs  GreetSpec.hs  GreeterSpec.hs  MainSpec.hs  TimerSpec.hs
test/Test/Hello/: ConfigurationSpec.hs  GreetSpec.hs  GreeterSpec.hs  MainSpec.hs  NotifierSpec.hs  RunSpec.hs  TimerSpec.hs
