name:
  hello
version:
  0.1.0.0
synopsis:
  Response to https://github.com/SeanShubin/hello#readme
description:
  Response to https://github.com/SeanShubin/hello#readme
homepage:
  https://github.com/jxv/hello#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  https://github.com/jxv
copyright:
  2016 Joe Vargas
category:
  Test
build-type:
  Simple
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Hello.Application
    Hello.Exit.Class
    Hello.Exit.Impl
    Hello.Clock.Class
    Hello.Configuration.Class
    Hello.Configuration.Impl
    Hello.Console.Class
    Hello.Console.Impl
    Hello.FileSystem.Class
    Hello.FileSystem.Impl
    Hello.Greeter.Class
    Hello.Greeter.Impl
    Hello.Timer.Class
    Hello.Timer.Impl
  build-depends:
      base >= 4.7 && < 5
    , text
    , mtl
    , transformers
    , time
    , text-conversions
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Werror
  default-language:
    Haskell2010

executable hello-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
    Wiring
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hello
    , text
    , mtl
    , transformers
    , text-conversions
    , time
    , either
  ghc-options:
    -Werror
  default-language:
    Haskell2010

test-suite hello-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , hello
    , test-fixture
    , hspec
    , text
    , transformers
    , mtl
    , time
    , data-default
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Werror
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    OverloadedStrings

source-repository head
  type:
    git
  location:
    https://github.com/jxv/hello
